--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,9 @@ body {
       min-height: 20px;
       background: transparent;
       margin: 7px 0 0 0;
- 
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
       }
 
 
